
syntax = "proto3";

package soma.rpc;

// Flag use to disambiguate the signature schemes supported by Soma.
//
// Note: the enum values defined by this proto message exactly match their
// expected BCS serialized values when serialized as a u8.
enum SignatureScheme {
  ED25519 = 0;
  SECP256K1 = 1;
  SECP256R1 = 2;
  MULTISIG = 3;
  BLS12381 = 4;
  ZKLOGIN = 5;
  PASSKEY = 6;
}